1. Restructured the layout
Modified placeholder texts

--- a/src/app/index copy.html
+++ b/src/app/index copy.html
@@ -1,7 +1,7 @@
 @@include('header.htm')
 
 @@include('blocks/menu-topbar-2.htm')
-@@include('blocks/banner-4.htm')
+@@include('blocks/banner.htm')
 @@include('blocks/course-cat-3.htm')
 @@include('blocks/course-grid-tooltip.htm')
 @@include('blocks/work-process4.htm')
