--- a/src/app/partials/blocks/banner copy.htm
+++ b/src/app/partials/blocks/banner copy.htm
@@ -5,21 +5,15 @@
             <div class="col-md-12 col-xl-6 col-lg-6">
                 <div class="banner-content">
                     <span class="subheading">Expert instruction</span>
-                    <h1>Distant learning for further expansion </h1>
-                    <p>The ultimate planning solution for people who want to reach their personal goals Effortless comfortable.</p>
+                    <h1>Empowering Kids with Coding Skills</h1>
+                    <p>Join our fun and interactive coding classes designed specifically for children. Learn, create, and innovate with us!</p>
                     
-                    <div class="banner-form me-5">
-                        <form action="#" class="form">
-                            <input type="text" class="form-control" placeholder="What do you want to learn?">
-                            <a href="#"> Search</a>
-                        </form>
-                    </div>
                    <div class="category-name">
-                       <span>Popular:</span>
-                       <a href="#">Design ,</a>
-                       <a href="#">Development ,</a>
-                       <a href="#">Marketing ,</a>
-                       <a href="#">Affiliate</a>
+                        <span>Popular:</span>
+                        <a href="#">Scratch ,</a>
+                        <a href="#">Python ,</a>
+                        <a href="#">Web Development ,</a>
+                        <a href="#">Robotics</a>
                    </div>
                 </div>
             </div>
