--- a/src/app/partials/blocks/navigation.htm
+++ b/src/app/partials/blocks/navigation.htm
@@ -15,33 +15,10 @@
             <!-- Collapse -->
             <div class="collapse navbar-collapse" id="navbarMenu">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbar3"  data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">
                             Home
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbar3">
-                            <li>
-                                <a class="dropdown-item " href="index.html">
-                                    Home 1
-                                </a>
-                            </li>
-                            
-                           <li>
-                                <a class="dropdown-item " href="index-2.html">
-                                    Home 2
-                                </a> 
-                           </li>
-                           <li>
-                                <a class="dropdown-item " href="index-3.html">
-                                    Home 3
-                                </a> 
-                           </li>
-                           <li>
-                                <a class="dropdown-item " href="index-4.html">
-                                    Home 4
-                                </a>
-                           </li> 
-                        </ul>
                     </li>
                     <li class="nav-item ">
                         <a href="about.html" class="nav-link js-scroll-trigger">
@@ -116,4 +93,3 @@
 </header>
 
         
-
